--- a/style/ui.css
+++ b/style/ui.css
@@ -105,6 +105,19 @@
 @-webkit-keyframes btnOut { from{ -webkit-transform: scale(1.2); } to{ -webkit-transform: scale(1); } }
 @-moz-keyframes    btnOut { from{    -moz-transform: scale(1.2); } to{    -moz-transform: scale(1); } }
 
+
+/* mask */
+span.mask {
+	position: fixed;
+	display: none;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.4);
+}
+
+
 /* hide */
 .menu-hidetoRB { /* hide to right bottom side */
     -webkit-transform-origin: right bottom;
